syntax = "proto2";

option java_multiple_files = true;
option java_package = "io.grpc.examples.hello_world";
option java_outer_classname = "HelloWorldProto";

package hello_world;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  required string name = 1;
}

// The response message containing the greetings
message HelloReply {
  required string message = 1;
}